@@ -399,6 +399,8 @@ class Branch(object):
         """Mirror source into this branch.
 
         This branch is considered to be 'local', having low latency.
+
+        :returns: PullResult instance
         """
         raise NotImplementedError(self.pull)
 
@@ -1398,9 +1400,11 @@ class BzrBranch(Branch):
         :param _run_hooks: Private parameter - allow disabling of
             hooks, used when pushing to a master branch.
         """
+        result = PullResult()
+        result.source = source
         source.lock_read()
         try:
-            old_count, old_tip = self.last_revision_info()
+            result.old_revno, result.old_revid = self.last_revision_info()
             try:
                 self.update_revisions(source, stop_revision)
             except DivergedBranches:
@@ -1408,19 +1412,19 @@ class BzrBranch(Branch):
                     raise
             if overwrite:
                 self.set_revision_history(source.revision_history())
-            new_count, new_tip = self.last_revision_info()
+            result.new_revno, result.new_revid = self.last_revision_info()
             if _run_hooks:
                 if _hook_master:
-                    _hook_local = self
+                    result.master = _hook_master
+                    result.local = self
                 else:
-                    _hook_master = self
-                    _hook_local = None
+                    result.master = self
+                    result.local = None
                 for hook in Branch.hooks['post_pull']:
-                    hook(source, _hook_local, _hook_master, old_count, old_tip,
-                        new_count, new_tip)
-            return new_count - old_count
+                    hook(result)
         finally:
             source.unlock()
+        return result
 
     def _get_parent_location(self):
         _locs = ['parent', 'pull', 'x-pull']
@@ -1914,6 +1918,14 @@ class BranchTestProviderAdapter(object):
         return result
 
 
+######################################################################
+# results of operations
+
+class PullResult(object):
+
+    pass
+
+
 class BranchCheckResult(object):
     """Results of checking branch consistency.
 
@@ -1932,17 +1944,6 @@ class BranchCheckResult(object):
         note('checked branch %s format %s',
              self.branch.base,
              self.branch._format)
-
-
-######################################################################
-# predicates
-
-
-@deprecated_function(zero_eight)
-def is_control_file(*args, **kwargs):
-    """See bzrlib.workingtree.is_control_file."""
-    from bzrlib import workingtree
-    return workingtree.is_control_file(*args, **kwargs)
 
 
 class Converter5to6(object):
